@@ -81,6 +81,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|util
+operator|.
+name|VersionInfo
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hbase
 operator|.
 name|HMaster
@@ -583,7 +597,96 @@ name|out
 operator|.
 name|write
 argument_list|(
-literal|"</h1>\n<p id=\"links_menu\"><a href=\"/hql.jsp\">HQL</a>,<a href=\"/logs/\">Local logs</a>,<a href=\"/stacks\">Thread Dump</a>,<a href=\"/logLevel\">Log Level</a></p>\n<hr id=\"head_rule\" />\n\n<h2>Master Attributes</h2>\n<table>\n<tr><th>Attribute Name</th><th>Value</th><th>Description</th></tr>\n<tr><td>Filesystem</td><td>"
+literal|"</h1>\n<p id=\"links_menu\"><a href=\"/hql.jsp\">HQL</a>,<a href=\"/logs/\">Local logs</a>,<a href=\"/stacks\">Thread Dump</a>,<a href=\"/logLevel\">Log Level</a></p>\n<hr id=\"head_rule\" />\n\n<h2>Master Attributes</h2>\n<table>\n<tr><th>Attribute Name</th><th>Value</th><th>Description</th></tr>\n<tr><td>Version</td><td>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|print
+argument_list|(
+name|VersionInfo
+operator|.
+name|getVersion
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|','
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|' '
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|'r'
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|print
+argument_list|(
+name|VersionInfo
+operator|.
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"</td><td>Hbase version and svn revision</td></tr>\n<tr><td>Compiled</td><td>"
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|print
+argument_list|(
+name|VersionInfo
+operator|.
+name|getDate
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|','
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|' '
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|print
+argument_list|(
+name|VersionInfo
+operator|.
+name|getUser
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|write
+argument_list|(
+literal|"</td><td>When this version was compiled and by whom</td></tr>\n<tr><td>Filesystem</td><td>"
 argument_list|)
 expr_stmt|;
 name|out
